# anima-linux

./: Cargo.toml  PKGBUILD  README.md
.cargo/: config.toml
src/: anima.rs  anima_resize.rs  db.rs
src/ui/: control_panel.rs  instances.rs  library.rs  mod.rs  settings.rs  toolbar.rs
